--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
-    "sequelize": "^6.28.0",
-    "sqlite3": "^5.1.4"
+    "mysql2": "^3.0.1",
+    "sequelize": "^6.28.0"
   }
 }
